--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   docker: circleci/docker@1.5.0
   terraform: circleci/terraform@3.0.0
 jobs:
-  run_tests:
+  build:
     docker:
       - image: cimg/node:14.16.0
     steps:
