--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   docker: circleci/docker@1.5.0
   terraform: circleci/terraform@3.0.0
 jobs:
-  build:
+  build-test:
     docker:
       - image: cimg/node:14.16.0
     steps:
@@ -23,3 +23,14 @@ jobs:
           path: test/
       - store_artifacts:
           path: test-results
+  build:
+    docker:
+      - image: cimg/node:14.16.0
+    steps:
+      - checkout
+      - run:
+          name: Snyk Scan Application files 
+          command: npm install 
+      - snyk/scan:
+          fail-on-issues: false
+          monitor-on-build: false
